migrating to jquery ui 1.9 Request for invoice fixes and many more.

--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -693,17 +693,22 @@ get_subscription_details_for_inward = SELECT t1.id AS subscriptionid, \
                                             t4.journalName, \
                                             t2.startYear, \
                                             t2.endYear, \
-                                            count(t2.copies) as copies \
+                                            count(t2.copies) as copies, \
+                                            t2.startMonth, \
+                                            t6.period, \
+                                            t6.rate \
                                        FROM subscription t1, \
                                             subscriptiondetails t2, \
                                             journal_group_contents t3, \
                                             journals t4, \
-                                            inward t5 \
+                                            inward t5, \
+                                            subscription_rates t6 \
                                       WHERE     t1.active = TRUE \
                                             AND t1.id = t2.subscriptionID \
                                             AND t2.journalGroupID = t3.journalGroupID \
                                             AND t3.journalID = t4.id \
                                             AND t1.inwardID = t5.id \
+                                            AND t2.journalPriceGroupID = t6.id \
                                             AND t5.inwardNumber = ? \
                                      GROUP BY subscriptionid, \
                                               t4.journalName, \
@@ -1006,25 +1011,45 @@ get_last_invoice = SELECT invoiceNumber FROM invoice where YEAR(invoiceCreationD
 
 invoice_insert = insert into invoice ( invoiceNumber, subscriptionID, invoiceCreationDate ) values ( ?, ?, ? )
 
-get_invoice_detail = SELECT t1.id as inwardID, \
-                            t1.inwardNumber, \
-                            t3.subscriberName, \
-                            t3.email, \
-                            t2.id as subscriptionID, \
-                            t2.subscriberID, \
-                            t3.shippingAddress, \
-                            t3.invoiceAddress, \
-                            t4.invoiceNumber, \
-                            DATE_FORMAT(t4.invoiceCreationDate,'%d/%m/%Y') as invoiceCreationDate, \
-                            sum(t6.rate * t5.copies)  as subscriptionTotal \
-                                    from inward t1, subscription t2, subscriber t3, invoice t4, \
-                                    subscriptiondetails t5, subscription_rates t6 \
-                            where t1.inwardNumber = ? \
-                                and t2.inwardID = t1.id \
-                                and t3.id = t2.subscriberID \
-                                and t4.subscriptionID = t2.id \
-                                and t5.subscriptionID = t2.id \
-                                and t5.journalPriceGroupID = t6.id \
+get_invoice_detail = SELECT \
+                        t1.id AS inwardID, \
+                        t1.inwardNumber, \
+                        t3.subscriberName, \
+                        t3.subscriberNumber, \
+                        t3.department, \
+                        t3.institution, \
+                        t3.email, \
+                        t3.pincode, \
+                        t7.city, \
+                        t8.country, \
+                        t2.id AS subscriptionID, \
+                        t2.subscriberID, \
+                        t3.shippingAddress, \
+                        t3.invoiceAddress, \
+                        t4.invoiceNumber, \
+                        DATE_FORMAT( \
+                          t4.invoiceCreationDate, \
+                          '%d/%m/%Y') \
+                          AS invoiceCreationDate, \
+                        sum(t6.rate * t5.copies) AS subscriptionTotal \
+                      FROM \
+                        inward t1, \
+                        subscription t2, \
+                        subscriber t3, \
+                        invoice t4, \
+                        subscriptiondetails t5, \
+                        subscription_rates t6, \
+                        cities t7, \
+                        countries t8 \
+                      WHERE \
+                        t1.inwardNumber = ? AND \
+                        t2.inwardID = t1.id AND \
+                        t3.id = t2.subscriberID AND \
+                        t3.city = t7.id AND \
+                        t3.country = t8.id AND \
+                        t4.subscriptionID = t2.id AND \
+                        t5.subscriptionID = t2.id AND \
+                        t5.journalPriceGroupID = t6.id
 
 
 search_subscriber_invoice = select  t5.invoiceNumber, \
@@ -1051,18 +1076,30 @@ get_invoice_detail_usng_invno =  Select  t5.id, \
                                  t6.inwardNumber, \
                                  t1.shippingAddress, \
                                  t1.invoiceAddress, \
+                                 t1.subscriberName, \
+                                 t1.subscriberNumber, \
+                                 t5.invoiceNumber, \
+                                 t1.department, \
+                                 t1.institution, \
+                                 t1.pincode, \
+                                 t7.city, \
+                                 t8.country, \
                                  sum(t3.copies * t4.rate) as subscriptionTotal \
                                         from  subscriber t1, \
                                               subscription t2, \
                                               subscriptiondetails t3, \
                                               subscription_rates t4, \
                                               invoice t5, \
-                                              inward t6 \
+                                              inward t6, \
+                                              cities t7, \
+                                              countries t8 \
                                             where t1.id=t2.subscriberID \
                                                 and t3.subscriptionID=t2.id \
                                                 and t3.journalPriceGroupID=t4.id \
                                                 and t2.id=t5.subscriptionId \
                                                 and t6.id=t2.inwardID \
+                                                and t1.city = t7.id \
+                                                and t1.country = t8.id \
                                                 and t5.invoiceNumber = ?
 
 #--------------------------------------------------------------------------
@@ -1539,7 +1576,7 @@ get_pl_refer_list = SELECT \
                         t3.id = t4.subscriptionID AND \
                         t2.journalGroupID <> t4.journalGroupID AND \
                         t2.endYear = YEAR(CURDATE()) AND \
-                        t4.endYear > YEAR(CURDATE()) AND \
+                        t4.endYear = YEAR(CURDATE()) AND \
                         t1.subscriberID = t5.id AND \
                         t2.active = TRUE \
                       GROUP BY \
@@ -1547,7 +1584,8 @@ get_pl_refer_list = SELECT \
                       ORDER BY \
                         subscriberID
 
-get_pl_refer_list_for_ui = SELECT \
+get_pl_refer_list_for_email_and_all = SELECT \
+                                t3.id as subscriberID, \
                                 t3.subscriberNumber, \
                                 t3.subscriberName, \
                                 t4.id AS subscriptionID, \
@@ -1569,14 +1607,37 @@ get_pl_refer_list_for_ui = SELECT \
                                 t5.journalGroupID = t6.id AND \
                                 t3.email like ? \
                             GROUP BY \
-                                t3.subscriberNumber
+                                subscriberID
 
+get_pl_refer_list_for_print_only = SELECT \
+                                t3.id as subscriberID, \
+                                t3.subscriberNumber, \
+                                t3.subscriberName, \
+                                t4.id AS subscriptionID, \
+                                t6.journalGroupName, \
+                                t5.endYear, \
+                                t3.email \
+                            FROM \
+                                prl t1, \
+                                prl_details t2, \
+                                subscriber t3, \
+                                subscription t4, \
+                                subscriptiondetails t5, \
+                                journal_groups t6 \
+                            WHERE \
+                                t1.id = t2.prl_id AND \
+                                t2.subscriber_id = t3.id AND \
+                                t2.subscription_id = t4.id AND \
+                                t4.id = t5.subscriptionID AND \
+                                t5.journalGroupID = t6.id AND \
+                                (t3.email = ? OR t3.email IS NULL) \
+                            GROUP BY \
+                                subscriberID
 get_email_ids = select email \
                 from subscriber, subscriber_type \
                 where email is not null and email <> "" \
                 and subscriber.subtype = subscriber_type.id
                 
-
 is_free_subscriber = SELECT \
                         count(1) \
                       FROM \
