Navigate to Next Subscriber Functionality

--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -517,6 +517,10 @@ get_missing_issues_for_subscriber = SELECT t1.ID as id,\
                                       AND t3.ID = t1.INWARDID \
                                       AND t2.JOURNALID = t4.ID \
                                       ORDER BY t1.ID DESC
+
+get_next_subscriber_number = select subscriberNumber from subscriber where id = (select id from subscriber where id > ? limit 1)
+get_first_subscriber_number = select subscriberNumber from subscriber where id = (select id from subscriber order by id asc limit 1)
+
 #--------------------------------------------------------------------------
 # Subscription
 #--------------------------------------------------------------------------
@@ -1294,13 +1298,13 @@ insert_mldtl_bil = insert into mailing_list_detail \
 
 update_bil = update back_issue_list SET sent_to_subscriber = true, sent_on = curdate() WHERE Id = ?
 
-search_bil = select mailing_list_detail.id, journalCode, subtypecode, subscriberNumber, subscriberName, department , institution, \
+search_bil = select mailing_list_detail.id, journalCode,subscriber_type.subtypecode, subscriberNumber, subscriberName, department , institution, \
                 address, city, district, state, country, pincode, mailing_list_detail.copies, mailing_list_detail.issue, \
                 mailing_list_detail.month, mailing_list_detail.`year`, mailing_list_detail.startYear, \
                 left((select month from months where months.Id = mailing_list_detail.startMonth), 3) as startMonth, \
                 mailing_list_detail.endYear, left((select month from months where months.Id = mailing_list_detail.endMonth), 3) as endMonth, \
-                subscriber_type.subtype as subType
-            FROM \
+                subscriber_type.subtype as subType \
+                    FROM \
             mailing_list_detail, subscriptiondetails, back_issue_list, subscriber_type \
             where mailing_list_detail.subscriptionDetailId = subscriptiondetails.id and subscriptiondetails.active = '1' \
             and mailing_list_detail.subtypecode = subscriber_type.subtypecode \
