--- a/trunk/src/java/properties/jds_sql.properties
+++ b/trunk/src/java/properties/jds_sql.properties
@@ -1412,22 +1412,16 @@ get_reminders_subscriber =  select subscriber.id, subscription.id as subId, subs
 insert_reminder_details = insert into reminder_details ( reminderId, medium, language, sent_date) \
                             VALUES (?, ?, ?, curdate())
 
-get_subscribed_journals = select subscriber.id, subscription.id as subId, subscriber_type.subtypecode, subscriber.subscriberNumber, \
-                                subscriber.subscriberName, reminders.balance, reminders.reminderType, reminders.reminderDate, \
-                                 subscriber.department, subscriber.institution, subscriber.shippingAddress, \
-                                cities.city, districts.district, states.state, countries.country, subscriber.pincode, \
-                                subscriber.email, reminders.id, invoice.invoiceNumber, invoice.invoiceCreationDate \
-                                from reminders, subscription \
-                                left join inward on subscription.inwardID = inward.id \
-                                left join invoice on invoice.subscriptionId = subscription.id, \
-                                subscriber left join cities on subscriber.city = cities.id \
-                                left join states on subscriber.state = states.id \
-                                left join countries on subscriber.country = countries.id \
-                                left join districts on subscriber.district = districts.id, subscriber_type \
-                                where \
-                                subscription.subscriberID = subscriber.id and reminders.subscriptionId = subscription.id \
-                                and subscriber.subtype = subscriber_type.id and year(reminders.reminderDate)= year(curdate()) \
-                                and reminders.reminderType = ?
+get_subscribed_journals = select journals.journalName, subscriptiondetails.startYear, \
+                         subscriptiondetails.startMonth, subscriptiondetails.endMonth, \
+                        subscriptiondetails.endYear, subscriptiondetails.copies \
+                        from reminders, subscription, subscriptiondetails, journal_groups, \
+                        journal_group_contents, journals \
+                        where reminders.subscriptionId = subscription.id \
+                        and subscriptiondetails.subscriptionID = subscription.id \
+                        and subscriptiondetails.journalGroupID = journal_groups.id \
+                        and journal_group_contents.journalGroupId = journal_groups.id \
+                        and journal_group_contents.journalId = journals.id and reminders.id = ?
 
 
 #------------------------------------------------------------------------------
@@ -1641,7 +1635,7 @@ get_email_ids = select email \
                 from subscriber, subscriber_type \
                 where email is not null and email <> "" \
                 and subscriber.subtype = subscriber_type.id
-                
+
 is_free_subscriber = SELECT \
                         count(1) \
                       FROM \
