Fixes issue 198 Query was missing.

--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -1424,6 +1424,12 @@ get_subscribed_journals = select journals.journalName, subscriptiondetails.start
                         and journal_group_contents.journalId = journals.id and reminders.id = ?
 
 
+get_subscriber_reminders = select subscription.id as subscriptionid, reminders.balance, reminderType as rtype, date_format(reminders.reminderDate, "%d/%m/%Y") as rdate, date_format(reminder_details.sent_date, "%d/%m/%Y") as sdate, \
+                            if (reminder_details.medium  = "E", "EMail", "Print") as medium \
+                            FROM reminders, reminder_details, subscription, subscriber \
+                            where reminder_details.reminderId = reminders.id and reminders.subscriptionId = subscription.id \
+                            and subscription.subscriberID = subscriber.id and subscriber.subscriberNumber = ?
+
 #------------------------------------------------------------------------------
 #End Reminders
 #------------------------------------------------------------------------------
