--- a/trunk/src/java/properties/jds_sql.properties
+++ b/trunk/src/java/properties/jds_sql.properties
@@ -1492,18 +1492,19 @@ complete_inward = update inward set completed = true where inwardNumber = ?
 update_missing_action = update missing_issue_journals SET action = ?, sentOn = curdate() WHERE missingissueId = ?
 
 reprint_mi_list = select mailing_list_detail.id, mailing_list_detail.mailinglistId, mailing_list_detail.subscriberId, \
-                mailing_list_detail.subscriptionId, mailing_list_detail.subscriptionDetailId, mailing_list_detail.journalId, \
-                mailing_list_detail.journalCode, mailing_list_detail.subtypecode, mailing_list_detail.subscriberNumber, \
-                mailing_list_detail.subscriberName, mailing_list_detail.department, mailing_list_detail.institution, \
-                mailing_list_detail.address, mailing_list_detail.city, mailing_list_detail.district, mailing_list_detail.state, \
-                mailing_list_detail.country, mailing_list_detail.pincode, mailing_list_detail.copies, mailing_list_detail.startYear, \
-                mailing_list_detail.startMonth, mailing_list_detail.endYear, mailing_list_detail.issue, mailing_list_detail.endMonth, \
-                mailing_list_detail.month, mailing_list_detail.`year` \
-                from missing_issue_journals, mailing_list_detail \
-                where mailing_list_detail.journalId = missing_issue_journals.journalId \
-                and mailing_list_detail.subscriptionDetailId = missing_issue_journals.subscriptiondetailId \
-                and mailing_list_detail.month = missing_issue_journals.month and mailing_list_detail.`year`= missing_issue_journals.`year` \
-                and missing_issue_journals.missingissueId = ?
+                 mailing_list_detail.subscriptionId, mailing_list_detail.subscriptionDetailId, mailing_list_detail.journalId, \
+                 mailing_list_detail.journalCode, mailing_list_detail.subtypecode, mailing_list_detail.subscriberNumber, \
+                 mailing_list_detail.subscriberName, mailing_list_detail.department, mailing_list_detail.institution, \
+                 mailing_list_detail.address, mailing_list_detail.city, mailing_list_detail.district, mailing_list_detail.state, \
+                 mailing_list_detail.country, mailing_list_detail.pincode, mailing_list_detail.copies, mailing_list_detail.startYear, \
+                 mailing_list_detail.startMonth, mailing_list_detail.endYear, mailing_list_detail.issue, mailing_list_detail.endMonth, \
+                 mailing_list_detail.month, mailing_list_detail.`year`, subscriber_type.subtype \
+                 from missing_issue_journals, mailing_list_detail, subscriber_type \
+                 where mailing_list_detail.journalId = missing_issue_journals.journalId \
+                 and mailing_list_detail.subscriptionDetailId = missing_issue_journals.subscriptiondetailId \
+                 and mailing_list_detail.month = missing_issue_journals.month and mailing_list_detail.`year`= missing_issue_journals.`year` \
+                 and mailing_list_detail.subtypecode = subscriber_type.subtypecode \
+                 and missing_issue_journals.missingissueId = ?
 
 generate_ml = select mailing_list.id, subscriber.id, subscription.id, subscriptiondetails.id, journals.id, \
                 journals.journalCode,subscriber_type.subtypecode, subscriber.subscriberNumber, subscriber.subscriberName, \
@@ -1512,6 +1513,7 @@ generate_ml = select mailing_list.id, subscriber.id, subscription.id, subscripti
                 subscriptiondetails.startMonth, subscriptiondetails.endYear, subscriptiondetails.endMonth, \
                 mailing_list.issue, missing_issue_journals.month, \
                 missing_issue_journals.`year`, missing_issue_journals.id \
+                subscriber_type.subtype \
                 from mailing_list, missing_issue_journals, missing_issue, \
                 subscriptiondetails, subscription, journals, subscriber_type, \
                 subscriber left join cities on subscriber.city = cities.id \
