--- a/trunk/src/java/properties/jds_sql.properties
+++ b/trunk/src/java/properties/jds_sql.properties
@@ -658,13 +658,27 @@ insert_subscription_detail = insert into subscriptiondetails ( \
 delete_subscription = update subscription set active = false where id=?
 
 
-get_subscription_details =  select t1.id, t2.journalGroupName, t1.copies \
-                            , t1.startYear, t1.endYear, (t1.copies * t3.rate) as total \
-                            , t1.active \
-                            from subscriptiondetails t1, journal_groups t2, subscription_rates t3 \
-                            where t1.journalGroupID = t2.id \
-                            and t1.journalPriceGroupID = t3.id \
-                            and t1.subscriptionID = ?
+get_subscription_details =  SELECT \
+                                t1.id, \
+                                t2.journalGroupName,  \
+                                t1.copies, \
+                                t1.startYear, \
+                                t1.endYear, \
+                                (t1.copies * t3.rate) AS total, \
+                                t1.active, \
+                                t1.journalPriceGroupID, \
+                                t3.period, \
+                                t3.rate, \
+                                t1.startMonth, \
+                                t1.journalGroupID \
+                              FROM \
+                                subscriptiondetails t1, \
+                                journal_groups t2, \
+                                subscription_rates t3 \
+                              WHERE \
+                                t1.journalGroupID = t2.id AND \
+                                t1.journalPriceGroupID = t3.id AND \
+                                t1.subscriptionID = ?
 
 get_subscription_details_free_subscribers = SELECT \
                                                 t3.journalGroupName, \
@@ -1105,6 +1119,31 @@ get_invoice_detail_usng_invno =  Select  t5.id, \
                                                 and t1.city = t7.id \
                                                 and t1.country = t8.id \
                                                 and t5.invoiceNumber = ?
+
+get_invoice_detail_for_prl = SELECT \
+                                t6.id as subscriberId, \
+                                t6.subscriberNumber, \
+                                t1.subscriptionId, \
+                                t6.subscriberName, \
+                                t6.invoiceAddress, \
+                                t6.shippingAddress, \
+                                t6.subtype as subscriberType \
+                              FROM \
+                                invoice t1, \
+                                subscription t2, \
+                                subscriptiondetails t3, \
+                                journals t4, \
+                                journal_group_contents t5, \
+                                subscriber t6 \
+                              WHERE \
+                                t1.subscriptionId = t2.id AND \
+                                t2.id = t3.subscriptionID AND \
+                                t3.journalGroupID = t5.journalGroupId AND \
+                                t5.journalId = t4.id AND \
+                                t2.subscriberID = t6.id AND \
+                                t1.invoiceNumber = ? \
+                              GROUP BY \
+                                t6.subscriberNumber
 
 #--------------------------------------------------------------------------
 # Start Mailing List
@@ -1568,77 +1607,88 @@ get_miId_for_inward = Select missing_issue.id, subscriber.subscriberNumber \
 # Please refer list
 # ------------------------
 get_pl_refer_list = SELECT \
-                        t5.id as subscriberID, \
-                        t1.id as subscriptionID \
+                        t1.subscriberID, \
+                        t2.subscriptionID \
                       FROM \
-                        subscriber t5, \
                         subscription t1, \
                         subscriptiondetails t2, \
-                        subscription t3, \
-                        subscriptiondetails t4 \
+                        subscriber t3, \
+                        subscriber_type t4 \
                       WHERE \
-                        t1.subscriberID = t3.subscriberID AND \
                         t1.id = t2.subscriptionID AND \
-                        t3.id = t4.subscriptionID AND \
-                        t2.journalGroupID <> t4.journalGroupID AND \
-                        t2.endYear = YEAR(CURDATE()) AND \
-                        t4.endYear = YEAR(CURDATE()) AND \
-                        t1.subscriberID = t5.id AND \
-                        t2.active = TRUE \
+                        t1.subscriberID = t3.id AND \
+                        t3.subtype = t4.id AND \
+                        t4.subtype <> 'Free' AND \
+                        t2.endYear = YEAR(CURDATE()) \
                       GROUP BY \
-                        subscriberID, subscriptionID \
-                      ORDER BY \
-                        subscriberID
+                        t1.subscriberID, \
+                        t2.subscriptionID
 
 get_pl_refer_list_for_email_and_all = SELECT \
-                                t3.id as subscriberID, \
-                                t3.subscriberNumber, \
-                                t3.subscriberName, \
-                                t4.id AS subscriptionID, \
-                                t6.journalGroupName, \
-                                t5.endYear, \
-                                t3.email \
-                            FROM \
-                                prl t1, \
-                                prl_details t2, \
-                                subscriber t3, \
-                                subscription t4, \
-                                subscriptiondetails t5, \
-                                journal_groups t6 \
-                            WHERE \
-                                t1.id = t2.prl_id AND \
-                                t2.subscriber_id = t3.id AND \
-                                t2.subscription_id = t4.id AND \
-                                t4.id = t5.subscriptionID AND \
-                                t5.journalGroupID = t6.id AND \
-                                t3.email like ? \
-                            GROUP BY \
-                                subscriberID
+                                        t3.id AS subscriberID, \
+                                        t3.subscriberNumber, \
+                                        t6.invoiceNumber, \
+                                        t3.subscriberName, \
+                                        t4.id AS subscriptionID, \
+                                        t3.email, \
+                                        t5.endYear, \
+                                        t2.id as prl_id \
+                                      FROM \
+                                        prl t1, \
+                                        prl_details t2, \
+                                        subscriber t3, \
+                                        subscription t4, \
+                                        subscriptiondetails t5, \
+                                        invoice t6 \
+                                      WHERE \
+                                        t1.id = t2.prl_id AND \
+                                        t2.invoice_id = t6.id AND \
+                                        t4.subscriberID = t3.id AND \
+                                        t6.subscriptionId = t4.id AND \
+                                        t4.id = t5.subscriptionID AND \
+                                        t1.year = YEAR(CURDATE()) AND \
+                                        t3.email LIKE ? \
+                                      GROUP BY \
+                                        subscriberID, \
+                                        invoiceNumber, \
+                                        subscriptionID
 
 get_pl_refer_list_for_print_only = SELECT \
-                                t3.id as subscriberID, \
-                                t3.subscriberNumber, \
-                                t3.subscriberName, \
-                                t4.id AS subscriptionID, \
-                                t6.journalGroupName, \
-                                t5.endYear, \
-                                t3.email \
-                            FROM \
-                                prl t1, \
-                                prl_details t2, \
-                                subscriber t3, \
-                                subscription t4, \
-                                subscriptiondetails t5, \
-                                journal_groups t6 \
-                            WHERE \
-                                t1.id = t2.prl_id AND \
-                                t2.subscriber_id = t3.id AND \
-                                t2.subscription_id = t4.id AND \
-                                t4.id = t5.subscriptionID AND \
-                                t5.journalGroupID = t6.id AND \
-                                (t3.email = ? OR t3.email IS NULL) \
-                            GROUP BY \
-                                subscriberID
+                                        t3.id AS subscriberID, \
+                                        t3.subscriberNumber, \
+                                        t6.invoiceNumber, \
+                                        t3.subscriberName, \
+                                        t4.id AS subscriptionID, \
+                                        t3.email, \
+                                        t5.endYear, \
+                                        t2.id as prl_id \
+                                      FROM \
+                                        prl t1, \
+                                        prl_details t2, \
+                                        subscriber t3, \
+                                        subscription t4, \
+                                        subscriptiondetails t5, \
+                                        invoice t6 \
+                                      WHERE \
+                                        t1.id = t2.prl_id AND \
+                                        t2.invoice_id = t6.id AND \
+                                        t4.subscriberID = t3.id AND \
+                                        t6.subscriptionId = t4.id AND \
+                                        t4.id = t5.subscriptionID AND \
+                                        t1.year = YEAR(CURDATE()) AND \
+                                        (t3.email = ? OR t3.email IS NULL) \
+                                      GROUP BY \
+                                        subscriberID, \
+                                        invoiceNumber, \
+                                        subscriptionID
+
+get_prl_id_for_current_year = SELECT \
+                                id \
+                              FROM \
+                                prl \
+                              WHERE \
+                                year = year(CURDATE())
+
 get_email_ids = select email \
                 from subscriber, subscriber_type \
                 where email is not null and email <> "" \
@@ -1653,3 +1703,13 @@ is_free_subscriber = SELECT \
                         subtype = 'Free' \
                       LIMIT \
                         1
+
+get_journal_grp_price = SELECT \
+                            t1.rate \
+                          FROM \
+                            subscription_rates t1 \
+                          WHERE \
+                            t1.journalGroupId = ? AND \
+                            t1.subtypeId = ? AND \
+                            t1.`year` = ? AND \
+                            t1.period = ?
