prl list changes

--- a/JDSMigration/log4j.properties
+++ b/JDSMigration/log4j.properties
@@ -6,7 +6,7 @@
 #FATAL        The FATAL level designates very severe error events that will presumably lead the application to abort.
 #OFF          The OFF has the highest possible rank and is intended to turn off logging.
 
-log4j.rootLogger=WARN, stdout, migration
+log4j.rootLogger=FATAL, stdout, migration
 
 log4j.logger.JDSMigration.OldInward=FATAL
 log4j.logger.JDSMigration.Inward=FATAL
@@ -44,11 +44,11 @@ log4j.appender.migration.layout.ConversionPattern=%d %5p [%t] (%F:%L) - %m%n
 log4j.appender.migration.File=logs\\${log4j.logger}\\migration.log
 log4j.appender.migration.MaxFileSize=2500KB
 # Keep one backup file
-log4j.appender.migration.MaxBackupIndex=2
+#log4j.appender.migration.MaxBackupIndex=2
 
 log4j.appender.cities=org.apache.log4j.FileAppender
 log4j.appender.cities.layout=org.apache.log4j.PatternLayout
 log4j.appender.cities.layout.ConversionPattern=%d %5p [%t] (%F:%L) - %m%n
 log4j.appender.cities.File=logs\\invalidcities.log
-log4j.appender.cities.MaxBackupIndex=0
+#log4j.appender.cities.MaxBackupIndex=0
 
