--- a/trunk/src/java/properties/jds_sql.properties
+++ b/trunk/src/java/properties/jds_sql.properties
@@ -1480,7 +1480,7 @@ insert_missing_issue = insert into missing_issue ( inwardId, subscriberId,msEntr
                         VALUES ( (select id from inward where inward.inwardNumber = ?), \
                         (select id from subscriber where subscriber.subscriberNumber = ?), curdate())
 
-insert_missing_journals = insert into missing_issue_journals ( missingissueId, subscriptiondetailId, journalGroupId, journalId, month, `year`, missingCopies ) \
+insert_missing_journals = insert into missing_issue_journals ( missingissueId, subscriptiondetailId, journalGroupId, journalId, issue, `year`, missingCopies, mailinglistid ) \
                             VALUES ( ?, \
                             (select subscriptiondetails.id from subscriptiondetails, journal_groups where \
                                 subscriptiondetails.subscriptionID = ? \
@@ -1488,7 +1488,7 @@ insert_missing_journals = insert into missing_issue_journals ( missingissueId, s
                                     journal_groups.journalGroupName = ?), \
                               (select id from journal_groups where journal_groups.journalGroupName = ?), \
                               (select id from journals where journalName = ?), \
-                            (select id from months where month = ?), ?, ?)
+                            ?, ?, ?, ?)
 
 
 get_subscriptionid = select subscription.id from subscription, subscriber where \
@@ -1507,10 +1507,10 @@ get_copies = select subscriptiondetails.copies from subscriptiondetails, journal
             and journal_groups.journalGroupName = ? and subscriptiondetails.subscriptionID = ?
 
 get_missing_journals = select subscriptiondetails.id, journal_groups.journalGroupName, journals.journalCode, \
-                        journals.journalName, subscriptiondetails.copies, missing_issue_journals.month, \
+                        journals.journalName, subscriptiondetails.copies, missing_issue_journals.issue, \
                         missing_issue_journals.`year`, missing_issue_journals.missingCopies, \
                         subscriptiondetails.startYear, subscriptiondetails.endMonth, subscriptiondetails.startMonth, \
-                        subscriptiondetails.endYear \
+                        subscriptiondetails.endYear, if(missing_issue_journals.mailinglistid = 0, "Generate", "Reprint") as action \
                         from missing_issue_journals, subscriptiondetails, journal_groups, journals \
                         where missing_issue_journals.subscriptiondetailId = subscriptiondetails.id \
                         and missing_issue_journals.journalGroupId = journal_groups.id \
@@ -1541,8 +1541,23 @@ reprint_mi_list = select mailing_list_detail.id, mailing_list_detail.mailinglist
                  from missing_issue_journals, mailing_list_detail, subscriber_type \
                  where mailing_list_detail.journalId = missing_issue_journals.journalId \
                  and mailing_list_detail.subscriptionDetailId = missing_issue_journals.subscriptiondetailId \
-                 and mailing_list_detail.month = missing_issue_journals.month and mailing_list_detail.`year`= missing_issue_journals.`year` \
+                 and mailing_list_detail.issue = missing_issue_journals.issue and mailing_list_detail.`year`= missing_issue_journals.`year` \
                  and mailing_list_detail.subtypecode = subscriber_type.subtypecode \
+                 and missing_issue_journals.missingissueId = ?
+
+reprint_mi_list_action = select mailing_list_detail.id, mailing_list_detail.mailinglistId, mailing_list_detail.subscriberId, \
+                 mailing_list_detail.subscriptionId, mailing_list_detail.subscriptionDetailId, mailing_list_detail.journalId, \
+                 mailing_list_detail.journalCode, mailing_list_detail.subtypecode, mailing_list_detail.subscriberNumber, \
+                 mailing_list_detail.subscriberName, mailing_list_detail.department, mailing_list_detail.institution, \
+                 mailing_list_detail.address, mailing_list_detail.city, mailing_list_detail.district, mailing_list_detail.state, \
+                 mailing_list_detail.country, mailing_list_detail.pincode, mailing_list_detail.copies, mailing_list_detail.startYear, \
+                 mailing_list_detail.startMonth, mailing_list_detail.endYear, mailing_list_detail.issue, mailing_list_detail.endMonth, \
+                 mailing_list_detail.month, mailing_list_detail.`year`, subscriber_type.subtype \
+                 from missing_issue_journals, mailing_list_detail, subscriber_type \
+                 where mailing_list_detail.journalId = missing_issue_journals.journalId \
+                 and mailing_list_detail.subscriptionDetailId = missing_issue_journals.subscriptiondetailId \
+                 and mailing_list_detail.issue = missing_issue_journals.issue and mailing_list_detail.`year`= missing_issue_journals.`year` \
+                 and mailing_list_detail.subtypecode = subscriber_type.subtypecode and (missing_issue_journals.mailinglistid <> 0 or missing_issue_journals.mailinglistid <> null) \
                  and missing_issue_journals.missingissueId = ?
 
 generate_ml = select mailing_list.id, subscriber.id, subscription.id, subscriptiondetails.id, journals.id, \
@@ -1550,8 +1565,8 @@ generate_ml = select mailing_list.id, subscriber.id, subscription.id, subscripti
                 subscriber.department, subscriber.institution, subscriber.shippingAddress, cities.city, districts.district, \
                 states.state, countries.country, subscriber.pincode, missing_issue_journals.missingCopies, subscriptiondetails.startYear, \
                 subscriptiondetails.startMonth, subscriptiondetails.endYear, subscriptiondetails.endMonth, \
-                mailing_list.issue, missing_issue_journals.month, \
-                missing_issue_journals.`year`, missing_issue_journals.id \
+                mailing_list.month, missing_issue_journals.issue, \
+                missing_issue_journals.`year`, missing_issue_journals.id, \
                 subscriber_type.subtype \
                 from mailing_list, missing_issue_journals, missing_issue, \
                 subscriptiondetails, subscription, journals, subscriber_type, \
@@ -1564,10 +1579,10 @@ generate_ml = select mailing_list.id, subscriber.id, subscription.id, subscripti
                 and missing_issue_journals.journalId = journals.id \
                 and missing_issue_journals.journalId = mailing_list.journalId \
                 and missing_issue_journals.subscriptiondetailId = subscriptiondetails.id \
-                and missing_issue_journals.month = mailing_list.month and missing_issue_journals.`year` = mailing_list.`year` \
+                and missing_issue_journals.issue = mailing_list.issue and missing_issue_journals.`year` = mailing_list.`year` \
                 and subscriptiondetails.subscriptionID = subscription.id and subscription.subscriberID = subscriber.id \
                 and missing_issue_journals.subscriptiondetailId = subscriptiondetails.id and missing_issue.subscriberId = subscriber.id \
-                and missing_issue_journals.missingissueId = missing_issue.id \
+                and missing_issue_journals.missingissueId = missing_issue.id and (missing_issue_journals.mailinglistid = 0 or missing_issue_journals.mailinglistid = null) \
                 and subscriber.subtype = subscriber_type.id and missing_issue_journals.missingissueId = ?
 
 insert_mldtl_mil = insert into mailing_list_detail \
@@ -1583,11 +1598,21 @@ get_month_mi = select months.month from months, mailing_list, journals \
             where mailing_list.journalId = journals.id \
                 and mailing_list.month = months.id and journals.journalName = ? and mailing_list.`year` = ?
 
+get_issue_mi = Select issueNumber from issues where issues.issueNumber <= (select max(mailing_list.issue) FROM mailing_list, journals \
+                where mailing_list.journalId = journals.id \
+                and journals.journalName = ? and mailing_list.`year` = ?)
+
 get_miId_for_inward = Select missing_issue.id, subscriber.subscriberNumber \
                         FROM missing_issue, inward, subscriber \
                         where \
                         missing_issue.inwardId = inward.id \
                         and missing_issue.subscriberId = subscriber.id and inward.inwardNumber = ?
+
+get_ml_id_for_mi = select mailing_list_detail.id from mailing_list_detail, journals \
+                    where mailing_list_detail.journalId = journals.id and subscriptionId = ? \
+                    AND journals.journalName = ? AND `year` = ? AND issue = ?
+
+check_mailing_status = select missing_issue_journals.id from missing_issue_journals where missingissueId = ? and (mailinglistid = 0 or mailinglistid = null)
 #--------------------------------------------------------------------------
 # End Missing Issue List
 #-------------------------------------- --   ----------------------------------
