RFI pdf changes bug fix: when search subscriber was cancelled, subscriber gets selected.

--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -711,10 +711,12 @@ get_subscription_details_for_inward = SELECT t1.id AS subscriptionid, \
                                             t4.journalName, \
                                             t2.startYear, \
                                             t2.endYear, \
-                                            count(t2.copies) as copies, \
+                                            t2.copies, \
                                             t2.startMonth, \
                                             t6.period, \
-                                            t6.rate \
+                                            t6.rate, \
+                                            t2.journalGroupID, \
+                                            (t2.copies * t6.rate) as total \
                                        FROM subscription t1, \
                                             subscriptiondetails t2, \
                                             journal_group_contents t3, \
@@ -729,6 +731,7 @@ get_subscription_details_for_inward = SELECT t1.id AS subscriptionid, \
                                             AND t2.journalPriceGroupID = t6.id \
                                             AND t5.inwardNumber = ? \
                                      GROUP BY subscriptionid, \
+                                              t2.journalGroupID, \
                                               t4.journalName, \
                                               t2.startYear, \
                                               t2.endYear
