--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -54,8 +54,10 @@ file.reference.jxl.jar=lib\\jxl.jar
 file.reference.log4j-1.2.16.jar=lib\\log4j-1.2.16.jar
 file.reference.mysql-connector-java-5.1.18-bin.jar=lib\\mysql-connector-java-5.1.18-bin.jar
 file.reference.mail.jar=lib/javamail-1.4.4/mail.jar
+file.reference.pojoxml-1.0.jar=lib\\pojoxml-1.0.jar
 file.reference.simple-java-mail-2.0.jar=lib\\simple-java-mail-2.0.jar
 file.reference.smtp.jar=lib/javamail-1.4.4/smtp.jar
+file.reference.xmlpull-1.1.3.1.jar=lib\\xmlpull-1.1.3.1.jar
 file.reference.xstream-1.4.3.jar=lib\\xstream-1.4.3.jar
 file.reference.YUIAnt.jar=lib\\YUIAnt.jar
 file.reference.yuicompressor-2.4.7.jar=lib\\yuicompressor-2.4.7.jar
@@ -91,7 +93,9 @@ javac.classpath=\
     ${file.reference.commons-fileupload-1.2.2.jar}:\
     ${file.reference.commons-io-2.4.jar}:\
     ${file.reference.jxl.jar}:\
-    ${file.reference.xstream-1.4.3.jar}
+    ${file.reference.xstream-1.4.3.jar}:\
+    ${file.reference.pojoxml-1.0.jar}:\
+    ${file.reference.xmlpull-1.1.3.1.jar}
     ${file.reference.mail.jar}:\
     ${file.reference.smtp.jar}
 # Space-separated list of extra javac options
