--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -433,6 +433,8 @@ get_in_agent_dtls = select agentName from agents where id = (select agentId from
 # Subscriber
 #--------------------------------------------------------------------------
 
+get_subscriber_id_from_number = select id from subscriber where subscriberNumber = ?
+
 subscriber_insert = insert into subscriber(subscriberNumber, subscriberCreationDate, subscriberName, shippingAddress, invoiceAddress,city, district, state, country, pincode, subtype, \
                     department, institution, email, agent, deactive) \
                      values (?,?,?,?,?, \
