added chq return tab save the chq return in a table for history if the inward has a subscriber id but does not have email, then use the subscriber email id

--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -352,6 +352,7 @@ get_inward_by_number = select t1.inwardNumber\
                       ,t11.language \
                       ,t12.subscriptionID \
                       ,t14.agentName \
+                      ,t5.email as subscriberemail \
                 from inward t1 \
                     left join countries t2 on t1.country = t2.id \
                     left join states t3 on t1.state = t3.id \
@@ -417,6 +418,38 @@ pending_inwards = select inwardNumber, t4.subscriberNumber as subscriberId, t14.
 update_cheque_return =  update inward set \
                         chequeDDReturn = ?, chequeDDReturnReason = (select id from inward_return_reasons where return_reason=?), \
                         chequeDDReturnReasonOther = ? , returnDate = ? where inwardNumber = ?
+
+update_cheque_return_details = INSERT INTO chq_return_details \
+                                SET return_reason_id = \
+                                       (SELECT id \
+                                          FROM inward_return_reasons \
+                                         WHERE return_reason = ?), \
+                                    return_reason_other = ?, \
+                                    return_date = ?, \
+                                    amount = ?, \
+                                    inward_id = ?, \
+                                    chq_no = ?, \
+                                    chq_date = ? \
+                                ON DUPLICATE KEY UPDATE return_reason_id = values(return_reason_id), \
+                                                        return_reason_other = values(return_reason_other), \
+                                                        return_date = values(return_date), \
+                                                        amount = values(amount)
+
+print_email_chq_return = SELECT t3.subscriberNumber as subscriberId, \
+                                t2.inwardNumber, \
+                                t1.chq_no as chqddNumber, \
+                                DATE_FORMAT(t1.chq_date, '%d/%m/%Y') as paymentDate, \
+                                t4.return_reason as chequeDDReturnReason, \
+                                t1.return_reason_other as chequeDDReturnReasonOther, \
+                                t1.amount, \
+                                t2.email, \
+                                t3.email as subscriberEmail \
+                           FROM chq_return_details t1, inward t2, subscriber t3, inward_return_reasons t4 \
+                          WHERE     t1.inward_id = t2.id \
+                                AND t2.subscriberId = t3.id \
+                                AND t1.return_reason_id = t4.id \
+                                AND t2.inwardNumber = ? \
+                                AND t1.chq_no = ?
 
 update_subscriber_in_inward = update inward set subscriberId = ? where inwardNumber = ?
 
@@ -520,8 +553,25 @@ get_missing_issues_for_subscriber = SELECT t1.ID as id,\
                                       AND t2.JOURNALID = t4.ID \
                                       ORDER BY t1.ID DESC
 
+get_chq_return_for_subscriber = SELECT  t1.id, \
+                                        t1.chq_no AS chqNumber, \
+                                        DATE_FORMAT(t1.chq_date, '%d/%m/%Y') AS chqDate, \
+                                        t1.amount, \
+                                        t4.return_reason AS returnReason, \
+                                        DATE_FORMAT(t1.return_date, '%d/%m/%Y') AS returnDate \
+                                   FROM chq_return_details t1, \
+                                        inward t2, \
+                                        subscriber t3, \
+                                        inward_return_reasons t4 \
+                                  WHERE     t1.inward_id = t2.id \
+                                        AND t1.return_reason_id = t4.id \
+                                        AND t2.subscriberId = t3.id \
+                                        AND t3.subscriberNumber = ? \
+                                  ORDER BY id
+
 get_next_subscriber_number = select subscriberNumber from subscriber where id = (select id from subscriber where id > ? limit 1)
 get_first_subscriber_number = select subscriberNumber from subscriber where id = (select id from subscriber order by id asc limit 1)
+
 
 #--------------------------------------------------------------------------
 # Subscription
