added chq return tab save the chq return in a table for history if the inward has a subscriber id but does not have email, then use the subscriber email id

--- a/trunk/web/WEB-INF/classes/pdf_templates.properties
+++ b/trunk/web/WEB-INF/classes/pdf_templates.properties
@@ -1,9 +1,13 @@
-cheque_return = The Cheque/DD No: %s dated %s for INR %s is returned herewith for want of the following information
+cheque_return = The Cheque/DD No: %s dated %s for INR %s is returned herewith for want of the following information.
 
-inward_ack_with_amount = This is to acknowledge with thanks the receipt of %s of Amount Rs. %s towards your request for '%s'
+inward_ack_with_amount = This is to acknowledge with thanks the receipt of %s No: %s of Amount Rs. %s towards your request for '%s'.
 
-inward_ack_no_amount = This is to acknowledge your request for '%s'
+inward_ack_no_amount = This is to acknowledge your request for '%s'.
+
+inward_ack_invoice_with_amount = This is to acknowledge with thanks the receipt of %s No: %s of Amount Rs. %s towards your request for '%s'. The Invoice will be sent shortly.
+
+inward_ack_invoice_no_amount = This is to acknowledge your request for '%s'. The Invoice will be sent shortly.
 
 inward_request_for_invoice = As desired, We enclose our Invoice No. %s Date: %s for Rs. %s. \nPlease arrange an early payment by means of a Bank Draft (or) Cheque drawn in favour of INDIAN ACADEMY OF SCIENCES, BANGALORE.
 
-subscription_number_notice = Please always quote the above mentioned Subscription Number in all correspondence, claims, etc. 
+subscription_number_notice = Please always quote the above mentioned Subscription Number in all correspondence, claims, etc.
